<?xml version="1.0"?>
<package>
  <name>dso_ar</name>
  <version>0.0.0</version>
  <description>The dso_ar package</description>

  <maintainer email="tenteroring@gmail.com">tenteroring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pcl_ros</run_depend>
  <export>
  </export>
</package>
